[package]
name = "nscd-lookup"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
authors = ["René Kijewski <crates.io@k6i.de>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
