[package]
name = "nscd-lookup-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
authors = ["René Kijewski <crates.io@k6i.de>"]
publish = false

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
nscd-lookup = { version = "0.1.0", path = "../.." }
pretty-error-debug = { version = "0.3.0", default-features = false }
