[package]
name = "nscd-lookup-tokio"
version = "0.1.2"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
authors = ["René Kijewski <crates.io@k6i.de>"]
publish = false

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
nscd-lookup = { version = "0.1.2", path = "../..", features = ["tokio"] }
pretty-error-debug = { version = "0.3.0", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = ["macros", "rt"] }
